--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+/* MAIN */
+:root {
+  --mainCol: rgb(88, 12, 12);
+  --secCol: rgb(255, 255, 255);
+  --thirdCol: rgb(49, 49, 49);
+}
+
+body {
+  background-color: var(--thirdCol);
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
+  outline: none;
+}
+
+h2 {
+  color: var(--secCol);
+}
+
+.button {
+  color: var(--secCol);
+  background-color: var(--mainCol);
+  border-radius: 7px;
+  padding: 6px;
+  border: none;
+}
+
+.button:hover {
+  background-color: rgb(136, 18, 18);
+  transition: 1s;
+}
+
+/* HEADER */
+.header {
+  width: 100%;
+  background-color: var(--mainCol);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header h1 {
+  padding: 0.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header h1 a {
+  color: var(--secCol);
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* SEARCH BAR */
+.searchBar {
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
-.App-link {
-  color: #61dafb;
+/* MOVIE STUFF */
+.container {
+  width: 100%;
+  margin: 1em auto;
+  background-color: var(--thirdCol);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movieModal img {
+  width: 60%;
+}
+
+.movieModal h3 {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.movieModal img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modalFooter {
+  margin-right: auto;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 0.75rem;
+}
+
+.beforeCard {
+  background-color: rgb(218, 218, 218);
+  box-shadow: 0px 5px 20px 0px var(--thirdCol);
+  border-radius: 0.4em;
+}
+
+/* FOOTER */
+.footer {
+  margin: 0;
+  color: var(--secCol);
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.footer h6 a {
+  color: var(--mainCol);
+  text-decoration: none;
 }
