--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,13 @@ h2 {
 .header {
   width: 100%;
   text-align: center;
+  margin: 0;
 }
 
 .header h1 {
-  padding: 0.75rem;
+  padding-top: 1.1rem;
+  margin: 0;
+  padding-bottom: 1.1rem;
 }
 
 .header h1 a {
@@ -52,7 +55,7 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   width: 400px;
-  margin-top: 0.75rem;
+  margin-top: 0;
   margin-bottom: 0.75rem;
 }
 
