--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,8 +35,8 @@ h2 {
 /* HEADER */
 .header {
   width: 100%;
-  text-align: center;
   margin: 0;
+  text-align: center;
 }
 
 .header h1 {
@@ -48,6 +48,24 @@ h2 {
 .header h1 a {
   color: var(--mainCol);
   text-decoration: none;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+nav ul li {
+  list-style-type: none;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-top: 1.1rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: rgb(153, 186, 221);
 }
 
 /* SEARCH BAR */
