--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,12 +38,12 @@ h2 {
   color: var(--secCol);
   background-color: var(--mainCol);
   border-radius: 7px;
-  padding: 6px;
+  padding: 9px;
   border: none;
 }
 
 .button:hover {
-  background-color: var(--thirdCol);
+  background-color: #6b849f;
   transition: 1s;
 }
 
@@ -68,7 +68,6 @@ h2 {
 
 nav ul {
   display: flex;
-  margin-left: 550%;
   padding: 0;
 }
 
@@ -141,7 +140,7 @@ a {
 }
 
 .modalCard {
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 .movieModal img {
@@ -172,6 +171,20 @@ a {
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 5px 20px 0px var(--thirdCol);
   border-radius: 0.4em;
+}
+
+.saveBtn {
+  color: white;
+  background: var(--mainCol);
+  width: 15%;
+  border-radius: 0.4em;
+  border: 2px solid var(--thirdCol);
+  margin: 5px;
+}
+
+.saveBtn:active {
+  transform: scale(0.97);
+  transition: 0.1s;
 }
 
 /* FOOTER */
