--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@ h2 {
 .header h1 {
   padding-top: 1.1rem;
   margin: 0;
-  margin-left: 2rem;
+  margin-left: 3.5rem;
   padding-bottom: 1.1rem;
 }
 
@@ -72,7 +72,7 @@ h2 {
 nav ul {
   display: flex;
   padding: 0;
-  margin-right: 2rem;
+  margin-right: 5rem;
 }
 
 nav ul li {
@@ -101,7 +101,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   width: 400px;
-  margin-top: 0;
+  margin-top: -4rem;
   margin-bottom: 0.75rem;
 }
 
@@ -208,6 +208,12 @@ a {
   text-decoration: none;
 }
 
+@media (max-width: 991px) {
+  .searchBar {
+    margin-top: 0rem;
+  }
+}
+
 @media (max-width: 915px) {
   .grid {
     display: grid;
@@ -238,5 +244,23 @@ a {
   }
   .movieModal img {
     width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .header h1 {
+    margin-left: 2rem;
+  }
+  nav ul {
+    margin-right: 2rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .header h1 {
+    margin-left: 1rem;
+  }
+  nav ul {
+    margin-right: 1rem;
   }
 }
