--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,6 +25,14 @@ h2 {
   color: var(--secCol);
 }
 
+.danger {
+  color: red;
+}
+
+.danger:hover {
+  color: rgb(255, 110, 110) !important;
+}
+
 .card-img-top {
   cursor: pointer;
   transition: transform 0.3s;
@@ -38,7 +46,7 @@ h2 {
 .display-2 {
   text-align: center;
   margin-top: 10rem;
-  color: var(--mainCol);
+  color: white;
 }
 
 .button {
@@ -50,54 +58,28 @@ h2 {
 }
 
 .button:hover {
-  background-color: #6b849f;
+  background-color: #8a8a8a;
   transition: 1s;
 }
 
 /* HEADER */
-.header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+
+.navbar-brand {
+  margin-left: 2em;
+  font-size: 30px;
 }
 
-.header h1 {
-  padding-top: 1.1rem;
-  margin: 0;
-  margin-left: 3.5rem;
-  padding-bottom: 1.1rem;
+.right {
+  margin-left: auto;
+  margin-right: 5em;
 }
 
-.header h1 a {
-  color: var(--mainCol);
-  text-decoration: none;
+.right a:hover {
+  color: black;
 }
 
-nav ul {
-  display: flex;
-  padding: 0;
-  margin-right: 5rem;
-}
-
-nav ul li {
-  list-style-type: none;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding-top: 1.1rem;
-}
-
-nav ul li a,
-.navbar {
-  text-decoration: none;
-  color: rgb(153, 186, 221);
-}
-
-nav ul li a:hover {
-  color: #728ca8;
-}
-
-a {
-  cursor: pointer;
+.navbar-toggler {
+  margin-right: 1em;
 }
 
 /* SIGNUP/LOGIN */
@@ -149,13 +131,13 @@ a {
   margin-left: auto;
   margin-right: auto;
   width: 400px;
-  margin-top: -4.75rem;
+  margin-top: 0.75rem;
 }
 
 /* MOVIE STUFF */
 .container {
   width: 100%;
-  margin: 1em auto 2em auto;
+  margin: 1em auto 5em auto;
   background-color: var(--thirdCol);
 }
 
@@ -203,7 +185,7 @@ a {
   background: var(--mainCol);
   width: 25%;
   border-radius: 0.4em;
-  border: 2px solid var(--thirdCol);
+  border: 1px solid var(--thirdCol);
   margin: 5px;
 }
 
@@ -213,7 +195,7 @@ a {
 }
 
 .moviesSaved {
-  color: var(--mainCol);
+  color: white;
   text-align: left;
 }
 
@@ -222,6 +204,10 @@ a {
   bottom: 55%;
   right: 50%;
   color: var(--mainCol);
+}
+
+.cantSave a {
+  text-decoration: none;
 }
 
 /* FOOTER */
@@ -234,10 +220,9 @@ a {
 }
 .footerContent {
   flex: 1;
-  margin: 0;
+  margin: 0.75em 0 0.75em 0;
   color: white;
   text-align: center;
-  margin-bottom: 0.75em;
 }
 
 .footer h6 a {
@@ -258,8 +243,8 @@ a {
 }
 
 @media (max-width: 991px) {
-  .searchBar {
-    margin-top: 0rem;
+  .navbar-brand {
+    margin-left: 0.5em;
   }
 }
 
@@ -301,13 +286,6 @@ a {
 }
 
 @media (max-width: 600px) {
-  .header h1 {
-    margin-left: 2rem;
-  }
-  nav ul {
-    margin-right: 2rem;
-  }
-
   .form {
     width: 70vw;
   }
@@ -316,15 +294,6 @@ a {
 @media (max-width: 530px) {
   .form .blue {
     width: 35%;
-  }
-}
-
-@media (max-width: 500px) {
-  .header h1 {
-    margin-left: 1rem;
-  }
-  nav ul {
-    margin-right: 1rem;
   }
 }
 
