--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@
 
 body,
 html {
-  background-color: var(--thirdCol);
+  background-color: black;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -25,24 +25,6 @@ h2 {
   color: var(--secCol);
 }
 
-.danger {
-  color: red;
-}
-
-.danger:hover {
-  color: rgb(255, 110, 110) !important;
-}
-
-.card-img-top {
-  cursor: pointer;
-  transition: transform 0.3s;
-  border-radius: 0.4em;
-}
-
-.card-img-top:hover {
-  transform: scale(1.02);
-}
-
 .display-2 {
   text-align: center;
   margin-top: 10rem;
@@ -51,14 +33,18 @@ h2 {
 
 .button {
   color: var(--secCol);
-  background-color: var(--mainCol);
-  border-radius: 7px;
-  padding: 9px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0 8px 8px 0;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 39px;
+  width: 43px;
   border: none;
 }
 
 .button:hover {
-  background-color: #8a8a8a;
+  background-color: #a5a5a5;
   transition: 1s;
 }
 
@@ -78,8 +64,25 @@ h2 {
   color: black;
 }
 
+.right a:active {
+  background-color: rgb(179, 179, 179);
+}
+
 .navbar-toggler {
   margin-right: 1em;
+}
+
+.danger {
+  color: red;
+}
+
+.danger:hover {
+  background-color: rgb(255, 219, 219);
+  color: rgb(255, 110, 110) !important;
+}
+
+.danger:active {
+  background: red !important;
 }
 
 /* SIGNUP/LOGIN */
@@ -130,15 +133,34 @@ h2 {
 .searchBar {
   margin-left: auto;
   margin-right: auto;
-  width: 400px;
-  margin-top: 0.75rem;
+  width: 30%;
+  height: 39px;
+}
+
+.searchBar input {
+  border-radius: 8px 0 0 8px;
+  margin-right: 0 !important;
 }
 
 /* MOVIE STUFF */
 .container {
-  width: 100%;
+  width: 120%;
   margin: 1em auto 5em auto;
-  background-color: var(--thirdCol);
+  padding: 0;
+}
+
+.card-img-top {
+  cursor: pointer;
+  transition: transform 0.3s;
+  border-radius: 0.4em;
+}
+
+.card-img-top:hover {
+  transform: scale(1.02);
+}
+
+.modal-content {
+  background: rgba(255, 255, 255, 0.895);
 }
 
 .modalCard {
@@ -146,17 +168,14 @@ h2 {
 }
 
 .movieModal img {
-  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
 }
 
 .movieModal h3 {
   margin-top: 1rem;
   text-align: center;
-}
-
-.movieModal img {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .otherInfo {
@@ -170,22 +189,33 @@ h2 {
 
 .grid {
   display: grid;
+  width: 100%;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 0.7em;
 }
 
 .beforeCard {
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 5px 20px 0px var(--thirdCol);
+  background-color: rgb(0, 0, 0);
+  border: none;
   border-radius: 0.4em;
+}
+
+.buttonDiv {
+  display: flex;
+  justify-content: center;
+}
+
+.center {
+  text-align: center;
 }
 
 .saveBtn {
   color: white;
-  background: var(--mainCol);
+  background: linear-gradient(1deg, black, rgb(51, 51, 51) 99%);
   width: 25%;
+  height: 40px;
   border-radius: 0.4em;
-  border: 1px solid var(--thirdCol);
+  border: 0;
+  font-size: 20px;
   margin: 5px;
 }
 
