--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,10 +64,6 @@ h2 {
   color: black;
 }
 
-.right a:active {
-  background-color: rgb(179, 179, 179);
-}
-
 .navbar-toggler {
   margin-right: 1em;
 }
@@ -90,15 +86,14 @@ h2 {
 .form {
   width: 30vw;
   margin: 6vh auto auto;
-  color: var(--thirdCol);
+  color: black;
   background-color: white;
-  border: 2px solid var(--mainCol);
   border-radius: 3%;
   padding: 2rem;
 }
 
 .form h1 {
-  color: var(--thirdCol);
+  color: black;
   text-align: center;
   margin-bottom: 1rem;
 }
@@ -111,7 +106,7 @@ h2 {
 }
 
 .form p a {
-  color: var(--mainCol);
+  color: #0d6efd;
   text-decoration: none;
 }
 
@@ -121,9 +116,9 @@ h2 {
 }
 
 .form .blue {
-  background-color: var(--thirdCol);
-  color: var(--mainCol);
-  border: 1px solid var(--mainCol);
+  color: white;
+  background: linear-gradient(1deg, black, rgb(51, 51, 51) 99%);
+  border: 1px solid black;
   margin-top: 20px;
   width: 25%;
   text-align: center;
@@ -256,7 +251,7 @@ h2 {
 }
 
 .footer h6 a {
-  color: var(--mainCol);
+  color: #0d6efd;
   text-decoration: none;
 }
 
